24) kernel: ralink_wifi: fix apscan support.<br>
25) kernel: ralink_wifi: update eeprom array in driver.<br>
26) kernel: ralink_wifi: patch fix dhcp issue on new Apple and others buggy clients (use RATE_6 instead of 24).<br>
27) kernel: ralink_wifi: fia and enable decrease interference effects logic (dynamicvga and friends).<br>
28) kernel: net: sysctl: set frto=2, bug TCP: snd_cwnd is null http://patchwork.ozlabs.org/patch/234793/<br>
29) kernel: net: apply http://patchwork.ozlabs.org/patch/234793/ fix (in future need backport new FRTO code).<br>
30) kernel: net: fastnat/fastroute: use ip_route_input_noref(), to avoid 4 atomic ops per packet.<br>
31) kernel: net: fix network-related panic in Linux 3.2.63 and later (CVE-2014-7207).<br>
32) kernel: net: ipv[46] - Remove 2 unnecessary NETDEBUG OOM messages.<br>
33) kernel: ipv6: mld: fix add_grhead skb_over_panic for devs with large MTUs.<br>
<br>
<br>
<b>1.0.x</b><br>
1) init.d: optimize and small fix switch and offload configure.<br>
2) init.d: add shortname for LAN (need to lldpd daemon for hostname resolutions).<br>
3) goahead: fix swith from/to apcli with apcli bridge only modes.<br>
4) kernel: mm: page-writeback: inline account_page_dirtied() into single caller.<br>
5) kernel: ipv4: fix nexthop attlen check in fib_nh_match.<br>
6) kernel: hw_nat: spin_(un)lock must be Bottom Halve (prevent deadlock).<br>
7) kernel: wifi drivers: decrease life check packets max count and decrease life time for more speed cleanup died clients.<br>
8) kernel: raeth: fix raise spurious interrupts.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) add support dualstack ipv6/4 with dhcp v6/ra/6rd uplink support (need more info from ISP).<br>
3) add vlan support logic and web configure (need more info by NAG).<br>
4) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>